--- a/UnityAI/Packages/manifest.json
+++ b/UnityAI/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.megumin.explosion4unity": "https://github.com/KumoKyaku/Megumin.Explosion.git?path=Megumin.UnityPackage/Packages/megumin.explosion4unity",
+    "com.megumin.explosion4unity": "file:W:/Git/Megumin.Explosion/Megumin.UnityPackage/Packages/megumin.explosion4unity",
     "com.unity.collab-proxy": "1.17.6",
     "com.unity.ide.rider": "3.0.15",
     "com.unity.ide.visualstudio": "2.0.16",
