--- a/UnityAI/Packages/manifest.json
+++ b/UnityAI/Packages/manifest.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
     "com.megumin.explosion4unity": "file:W:/Git/Megumin.Explosion/Megumin.UnityPackage/Packages/megumin.explosion4unity",
+    "com.unity.ai.navigation": "1.1.1",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.render-pipelines.universal": "12.1.8",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.render-pipelines.universal": "14.0.4",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
     "com.yasirkula.ingamedebugconsole": "https://github.com/yasirkula/UnityIngameDebugConsole.git",
