--- a/UnityAI/Packages/manifest.json
+++ b/UnityAI/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.megumin.explosion4unity": "file:W:/Git/Megumin.Explosion/Megumin.UnityPackage/Packages/megumin.explosion4unity",
+    "com.megumin.referenceviewer": "file:W:/Git/ReferenceViewer",
     "com.unity.ai.navigation": "1.1.1",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.ide.rider": "3.0.16",
