增加配置保存功能

--- a/UnityAI/Packages/com.megumin.ai/Editor/Megumin.GameFramework.AI.Editor.asmdef
+++ b/UnityAI/Packages/com.megumin.ai/Editor/Megumin.GameFramework.AI.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "Megumin.GameFramework.AI.Editor",
     "rootNamespace": "Megumin.GameFramework.AI.Editor",
     "references": [
-        "Megumin.GameFramework.AI"
+        "Megumin.GameFramework.AI",
+        "Unity.Settings.Editor"
     ],
     "includePlatforms": [
         "Editor"
