--- a/UnityAI/Packages/com.megumin.ai/Editor/Megumin.GameFramework.AI.Editor.asmdef
+++ b/UnityAI/Packages/com.megumin.ai/Editor/Megumin.GameFramework.AI.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Megumin.GameFramework.AI.Editor",
     "references": [
         "Megumin.GameFramework.AI",
-        "Unity.Settings.Editor"
+        "Unity.Settings.Editor",
+        "Megumin.Explosion4Unity"
     ],
     "includePlatforms": [
         "Editor"
