--- a/UnityAI/Packages/com.megumin.ai/package.json
+++ b/UnityAI/Packages/com.megumin.ai/package.json
@@ -14,11 +14,12 @@
     "AI"
   ],
   "author": {
-    "name": "云却",
+    "name": "\u4e91\u5374",
     "email": "479813005@qq.com",
     "url": "https://github.com/KumoKyaku"
   },
   "dependencies": {
-    "com.unity.settings-manager": "1.0.3"
+    "com.unity.settings-manager": "1.0.3",
+    "com.megumin.binding": "0.0.1"
   }
 }
