拆分序列化包

--- a/UnityAI/Packages/com.megumin.ai/package.json
+++ b/UnityAI/Packages/com.megumin.ai/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "com.unity.settings-manager": "1.0.3",
+    "com.megumin.serialization": "0.0.1",
     "com.megumin.binding": "0.0.1"
   }
 }
