--- a/UnityAI/Packages/com.megumin.binding/package.json
+++ b/UnityAI/Packages/com.megumin.binding/package.json
@@ -1,30 +1,24 @@
 {
-    "name": "com.megumin.binding",
-    "displayName": "Binding",
-    
-    "version": "0.0.1",
-    "unity": "2021.3",
-    "description": "Wizard Fast Created.",
-    "category": "PackageWizard",
-    
-    "documentationUrl": "https://example.com/",
-    "changelogUrl": "https://example.com/changelog.html",
-    "licensesUrl": "https://example.com/licensing.html",
-    
-    "hideInEditor" : false,
-    
-    "keywords": [
-        "PackageWizard",
-        "Binding"
-    ],
-
-    "author": {
-        "name": "Unity",
-        "email": "unity@example.com",
-        "url": "https://www.unity3d.com"
-    }
+  "name": "com.megumin.binding",
+  "displayName": "Megumin Binding",
+  "version": "0.0.1",
+  "unity": "2021.3",
+  "description": "Wizard Fast Created.",
+  "category": "PackageWizard",
+  "documentationUrl": "https://example.com/",
+  "changelogUrl": "https://example.com/changelog.html",
+  "licensesUrl": "https://example.com/licensing.html",
+  "hideInEditor": false,
+  "keywords": [
+    "PackageWizard",
+    "Binding"
+  ],
+  "author": {
+    "name": "\u4e91\u5374",
+    "email": "479813005@qq.com",
+    "url": "https://github.com/KumoKyaku"
+  },
+  "dependencies": {
+    "com.megumin.serialization": "0.0.1"
+  }
 }
-
-
-
-
