--- a/UnityAI/Packages/com.megumin.binding/Editor/Megumin.Binding.Editor.asmdef
+++ b/UnityAI/Packages/com.megumin.binding/Editor/Megumin.Binding.Editor.asmdef
@@ -2,7 +2,9 @@
     "name": "Megumin.Binding.Editor",
     "rootNamespace": "Megumin.Binding.Editor",
     "references": [
-        "Megumin.Binding"
+        "Megumin.Binding",
+        "Megumin.Serialization",
+        "Megumin.Serialization.Editor"
     ],
     "includePlatforms": [
         "Editor"
