--- a/UnityAI/Packages/com.megumin.ai/Runtime/Megumin.GameFramework.AI.asmdef
+++ b/UnityAI/Packages/com.megumin.ai/Runtime/Megumin.GameFramework.AI.asmdef
@@ -2,7 +2,8 @@
     "name": "Megumin.GameFramework.AI",
     "rootNamespace": "Megumin.GameFramework.AI",
     "references": [
-        "GUID:0913ec06d78d40a48a5fb4f6abcd817c"
+        "GUID:0913ec06d78d40a48a5fb4f6abcd817c",
+        "GUID:b9e29b1e857abb4438a4cdde4aef4bee"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
