拆分代码生成器

--- a/UnityAI/Packages/com.megumin.ai/Editor/Megumin.GameFramework.AI.Editor.asmdef
+++ b/UnityAI/Packages/com.megumin.ai/Editor/Megumin.GameFramework.AI.Editor.asmdef
@@ -2,6 +2,7 @@
     "name": "Megumin.GameFramework.AI.Editor",
     "rootNamespace": "Megumin.GameFramework.AI.Editor",
     "references": [
+        "Megumin.Common",
         "Megumin.Reflection",
         "Megumin.GameFramework.AI",
         "Unity.Settings.Editor",
