--- a/UnityAI/Packages/com.megumin.ai/package.json
+++ b/UnityAI/Packages/com.megumin.ai/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/KumoKyaku"
   },
   "dependencies": {
+    "com.megumin.common": "0.0.1",
     "com.unity.settings-manager": "1.0.3",
     "com.megumin.serialization": "0.0.1",
     "com.megumin.binding": "0.0.1"
