--- a/UnityAI/Packages/com.megumin.binding/Editor/Megumin.Binding.Editor.asmdef
+++ b/UnityAI/Packages/com.megumin.binding/Editor/Megumin.Binding.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Megumin.Binding",
         "Megumin.Serialization",
-        "Megumin.Serialization.Editor"
+        "Megumin.Serialization.Editor",
+        "Megumin.Common"
     ],
     "includePlatforms": [
         "Editor"
