--- a/UnityAI/Packages/com.megumin.ai/Runtime/Megumin.GameFramework.AI.asmdef
+++ b/UnityAI/Packages/com.megumin.ai/Runtime/Megumin.GameFramework.AI.asmdef
@@ -2,6 +2,7 @@
     "name": "Megumin.GameFramework.AI",
     "rootNamespace": "Megumin.GameFramework.AI",
     "references": [
+        "GUID:293b3db1567cc8e479b4623ded498cfa",
         "GUID:e3141e3383f7d54428a008f1df9a1c9d",
         "GUID:0913ec06d78d40a48a5fb4f6abcd817c",
         "GUID:b9e29b1e857abb4438a4cdde4aef4bee"
