--- a/UnityAI/Packages/com.megumin.ai/package.json
+++ b/UnityAI/Packages/com.megumin.ai/package.json
@@ -3,11 +3,11 @@
   "displayName": "Megumin AI",
   "version": "1.0.0",
   "unity": "2021.3",
-  "description": "Wizard Fast Created.",
+  "description": "AI Plugin.",
   "category": "PackageWizard",
-  "documentationUrl": "https://example.com/",
-  "changelogUrl": "https://example.com/changelog.html",
-  "licensesUrl": "https://example.com/licensing.html",
+  "documentationUrl": "https://github.com/KumoKyaku/Megumin.GameFramework.AI.Samples/wiki",
+  "changelogUrl": "",
+  "licensesUrl": "",
   "hideInEditor": false,
   "keywords": [
     "PackageWizard",
