--- a/UnityAI/Packages/com.megumin.ai/package.json
+++ b/UnityAI/Packages/com.megumin.ai/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.0",
   "unity": "2021.3",
   "description": "AI Plugin.",
-  "category": "PackageWizard",
+  "category": "Megumin",
   "documentationUrl": "https://github.com/KumoKyaku/Megumin.GameFramework.AI.Samples/wiki",
   "changelogUrl": "",
   "licensesUrl": "",
