--- a/UnityAI/Packages/com.megumin.reflection/package.json
+++ b/UnityAI/Packages/com.megumin.reflection/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "unity": "2021.3",
   "description": "Wizard Fast Created.",
-  "category": "PackageWizard",
+  "category": "Megumin",
   "documentationUrl": "https://example.com/",
   "changelogUrl": "https://example.com/changelog.html",
   "licensesUrl": "https://example.com/licensing.html",
