--- a/UnityAI/Packages/com.megumin.ai.behaviortree/package.json
+++ b/UnityAI/Packages/com.megumin.ai.behaviortree/package.json
@@ -5,7 +5,7 @@
   "unity": "2021.3",
   "description": "Megumin AI BehaviorTree is a behavior tree editor plugin designed for AAA and indie games.  \r\nProvides a visual editor to create behavior trees without writing code. Allows designers to quickly create complex AI.  \r\nIt solves many pain points in the use of traditional behavior trees editor, and it is worth trying for users who are not satisfied with traditional behavior trees editor.",
   "category": "Megumin",
-  "documentationUrl": "https://github.com/KumoKyaku/Megumin.AI.Samples/wiki",
+  "documentationUrl": "https://github.com/KumoKyaku/Megumin.AI.Samples/wiki/BehaviorTree_Document",
   "changelogUrl": "",
   "licensesUrl": "",
   "hideInEditor": false,
@@ -15,7 +15,7 @@
     "AI.BehaviorTree"
   ],
   "author": {
-    "name": "\u4e91\u5374",
+    "name": "KumoKyaku",
     "email": "479813005@qq.com",
     "url": "https://github.com/KumoKyaku"
   },
