--- a/UnityAI/Packages/com.megumin.ai/package.json
+++ b/UnityAI/Packages/com.megumin.ai/package.json
@@ -11,10 +11,11 @@
   "hideInEditor": false,
   "keywords": [
     "PackageWizard",
+    "Megumin",
     "AI"
   ],
   "author": {
-    "name": "\u4e91\u5374",
+    "name": "KumoKyaku",
     "email": "479813005@qq.com",
     "url": "https://github.com/KumoKyaku"
   },
