--- a/UnityAI/Packages/com.megumin.reflection/package.json
+++ b/UnityAI/Packages/com.megumin.reflection/package.json
@@ -5,16 +5,17 @@
   "unity": "2021.3",
   "description": "Wizard Fast Created.",
   "category": "Megumin",
-  "documentationUrl": "https://example.com/",
-  "changelogUrl": "https://example.com/changelog.html",
-  "licensesUrl": "https://example.com/licensing.html",
+  "documentationUrl": "",
+  "changelogUrl": "",
+  "licensesUrl": "",
   "hideInEditor": false,
   "keywords": [
     "PackageWizard",
+    "Megumin",
     "Reflection"
   ],
   "author": {
-    "name": "\u4e91\u5374",
+    "name": "KumoKyaku",
     "email": "479813005@qq.com",
     "url": "https://github.com/KumoKyaku"
   }
