--- a/UnityAI/Packages/com.megumin.binding/package.json
+++ b/UnityAI/Packages/com.megumin.binding/package.json
@@ -3,7 +3,7 @@
   "displayName": "Megumin Binding",
   "version": "1.0.1",
   "unity": "2021.3",
-  "description": "Wizard Fast Created.",
+  "description": "The parameter binding module code of the Megumin-Plugins.",
   "category": "Megumin",
   "documentationUrl": "",
   "changelogUrl": "",
