--- a/UnityAI/Packages/com.megumin.binding/Runtime/Megumin.Binding.asmdef
+++ b/UnityAI/Packages/com.megumin.binding/Runtime/Megumin.Binding.asmdef
@@ -2,6 +2,7 @@
     "name": "Megumin.Binding",
     "rootNamespace": "Megumin.Binding",
     "references": [
+        "GUID:293b3db1567cc8e479b4623ded498cfa",
         "GUID:e3141e3383f7d54428a008f1df9a1c9d",
         "GUID:b9e29b1e857abb4438a4cdde4aef4bee"
     ],
